# tuxtests

./: .gitignore  CLI.md  Cargo.toml  GEMINI.md  LICENSE  README.md  SKILLS.md  install.sh  package-lock.json  package.json
.github/workflows/: rust.yml
docs/: HYBRID_ARCHITECTURE_PLAN.md  PRIVILEGED_DIAGNOSTICS_PLAN.md  UI_CONTRACT.md
src/: engine.rs  lib.rs  main.rs  models.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend/: index.html  main.js  styles.css
src-tauri/src/: commands.rs  lib.rs  main.rs
src/ai/: analyzer.rs  config.rs  gemini.rs  mod.rs  ollama.rs  rag.rs
src/bench/: mod.rs  smart.rs  throughput.rs
src/hardware/: connection.rs  mod.rs  pci.rs  storage.rs  system.rs
src/ui/: tui.rs
tests/: regression_tests.rs
tests/fixtures/: lvm_on_luks.json  slow_lane.json  zombie_drive.json
