[package]
name = "tuxtests"
version = "0.8.1"
edition = "2021"

[dependencies]
# CLI & Async
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }

# Data Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hardware Interaction
sysinfo = "0.30"
udev = "0.9"

# AI Integration
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
ollama-rs = "0.2"

# Security & Config
directories = "5.0"
keyring = "2.3"
toml = "0.8"
