[package]
name = "tuxtests-gui"
version = "0.8.1"
description = "TuxTests graphical shell"
edition = "2021"

[lib]
name = "tuxtests_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tuxtests = { path = ".." }
